fixed ejs problems

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,20 +10,10 @@
 </head>
 
 <body>
-    <nav>
-        <a href="/bakedGoods/new">Create a New Bakery Item</a>
-    </nav>
-
-    <h1 class="title">Biscoff index page</h1>
-    <ul>
-        <% for(let i=0; i < bakedGoods.length; i++) { %>
-            <li class="is-size-5 has-text-weight-light">
-                <a href="/bakedGoods/<%= i %>">
-                    <%= bakedGoods[i].name %>
-                </a>
-            </li>
-            <% } %>
-    </ul>
+    <div>
+        <h1>Budgtr App</h1>
+    </div>
+   
 </body>
 
 </html>
