--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,16 +4,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Biscoff Bikkies</title>
+    <title>Budgtr</title>
     <link rel="stylesheet" href="/normalize.css">
     <link rel="stylesheet" href="/skeleton.css">
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <h1>Budgtr App</h1>
     </div>
-   
+    <table>
+        <% for(let i=0; i < ledger.length; i++) { %>
+            <tr>
+
+                <td>
+                    <%= ledger[i].name %>
+                </td>
+            </tr>
+            <% } %>
+    </table>
+
 </body>
 
 </html>
