--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,7 @@
                 </tr>
                 <% } %>
         </table>
+        <button href="/budget/new">Add New</button>
     </div>
 </body>
 
