--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,8 +10,19 @@
 </head>
 
 <body>
-    <h1>New Item page</h1>
-
+    <div class="container">
+        <h1>New Item page</h1>
+        <br>
+        <form action="/budgets" method="POST">
+            Date: <input type="text" name="date" /><br />
+            Name: <input type="text" name="name" /><br />
+            From: <input type="text" name="from" /><br />
+            Amount: <input type="text" name="amount" /><br />
+            Tags: <input type="text" name="tags" /><br />
+            <br />
+            <input type="submit" value="Add Expense" />
+        </form>
+    </div>
 </body>
 
 </html>
