--- a/views/new.ejs
+++ b/views/new.ejs
@@ -14,11 +14,11 @@
         <h1>New Item page</h1>
         <br>
         <form action="/budgets" method="POST">
-            Date: <input type="text" name="date" /><br />
-            Name: <input type="text" name="name" /><br />
-            From: <input type="text" name="from" /><br />
-            Amount: <input type="text" name="amount" /><br />
-            Tags: <input type="text" name="tags" /><br />
+            <input type="text" name="date" placeholder="Date" /><br />
+            <input type="text" name="name" placeholder="Name" /><br />
+            <input type="text" name="from" placeholder="From" /><br />
+            <input type="text" name="amount" placeholder="Amount" /><br />
+            <input type="text" name="tags" placeholder="Tags" /><br />
             <br />
             <input type="submit" value="Add Expense" />
         </form>
