--- a/views/show.ejs
+++ b/views/show.ejs
@@ -31,7 +31,7 @@
                         <%=ledger.tags %>
 
                             <br>
-                            <button href="/budgets">Back</button>
+                            <button><a href="/budgets#">Back</a></button>
     </div>
 
 </body>
